@@ -23,19 +23,18 @@ class CategoriesController < ApplicationController
     @items = @category.
       items.
       where(draft: false).
-      includes(:attachments, :comments, :category, :language, :item_stat, :user, :tags).
+      includes(:attachments, :category, :language, :item_stat, :user, :tags).
       where("published_at is not NULL").
       where("published_at < '#{Time.now.to_s(:db)}'").
       order("published_at DESC").
       page(params[:page]).per(per_page)
-    
+
     # RSS configuration
     @rss_title = "Latest News for #{@category.title}"
     @rss_description = "World Mathaba - Latest News for #{@category.title}"
     @rss_source = url_for(@category)
     @rss_category = @category.title
     @rss_language = "en"
-    
     @last_published = @items.first.published_at
     
     respond_to do |format|
