@@ -32,9 +32,6 @@
       </p>
       <p class="source_url">
         Tags: <%= item.tag_list %>
-        <% if item.language %>
-          <%= item.language.description %>
-        <% end %>
       </p>
       <p class="page_views">
         <% if item.item_stat %>
